--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,3 +1,11 @@
-asyncio
-aiohttp
-aiohttp-retry
+aiohttp==3.8.4
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+async-timeout==4.0.2
+asyncio==3.4.3
+attrs==23.1.0
+charset-normalizer==3.1.0
+frozenlist==1.3.3
+idna==3.4
+multidict==6.0.4
+yarl==1.9.2
